# demo-workflows

./: .env.example  .gitignore  README.md  pyproject.toml
workflows/: nato.py  utils.py
workflows/durable_agent/: durable_agent.py  run_agent.py
workflows/durable_agent_streaming/: durable_agent_streaming.py  run_agent_streaming.py
workflows/ocr/: agent.py  approve.py  durable_agent.py  run.py  run_2.py  run_agent.py  run_local.py  test.py  worker.py
workflows/utils/: approve.py  test.py
workflows/workflow/: run.py  run_local.py  worker.py
